<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_app"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="15dp"
    tools:context=".BoletaHonorarios" >
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <!-- primer layout -->

        <LinearLayout
            android:id="@+id/linear_arriba"
            android:layout_width="fill_parent"
            android:layout_height="19dp"
            android:background="@drawable/boleta_arriba"
            android:orientation="vertical" >

	    </LinearLayout>
	    
        
        <!-- segundo layout -->
	    <LinearLayout
            android:id="@+id/linear_segundo"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:layout_marginTop="10dp" >
	        
	        <RelativeLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:background="#FFFFFF"
	            android:gravity="center_horizontal" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="5dp"
                android:layout_marginTop="5dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/calcula"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editText1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="80dp"
                android:text="@string/liquido"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView2"
                android:layout_centerHorizontal="true"
                android:text="@string/escribir"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView3"
                android:layout_centerHorizontal="true"
                android:text="@string/precio_defecto"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView4"
                android:layout_centerHorizontal="true"
                android:text="@string/recibir"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView5"
                android:layout_centerHorizontal="true"
                android:text="@string/precio_defecto"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView6"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:text="@string/bruto"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView7"
                android:layout_centerHorizontal="true"
                android:text="@string/escribir"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView8"
                android:layout_centerHorizontal="true"
                android:text="@string/precio_defecto"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView9"
                android:layout_centerHorizontal="true"
                android:text="@string/recibir"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView10"
                android:layout_centerHorizontal="true"
                android:text="@string/precio_defecto"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView12"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:inputType="number"
                android:maxLength="9"
                android:textSize="20sp" >

                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/button1"
                android:layout_alignBottom="@+id/button1"
                android:layout_alignRight="@+id/editText1"
                android:text="@string/limpiar" />

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/editText1"
                android:layout_below="@+id/editText1"
                android:text="@string/calcular" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView1"
                android:layout_below="@+id/textView1"
                android:layout_marginBottom="15dp"
                android:paddingLeft="15dp"
                android:text="@string/URL"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#999" />

        </RelativeLayout>

	    </LinearLayout>
	    
	    <!-- tercer layout -->
	    
	    <LinearLayout
            android:id="@+id/linear_tercero"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" 
	        android:background="@drawable/tile_boleta_abajo" >

	    </LinearLayout>
	    
	    <LinearLayout
            android:id="@+id/linear_cuarto"
	        android:layout_width="fill_parent"
	        android:layout_height="80dp"
	        android:orientation="vertical"  >

	    </LinearLayout>

        
        
    </LinearLayout><!-- FIN DEL CHILD -->


</ScrollView>